# pokemon-team-recommender

./: .gitignore  CLAUDE.md  HOW_IT_WORKS.md  LICENSE  README.md  app.py  pokemon_team_recommender_spec.md  pyproject.toml  requirements.txt  task.md  train_model_now.py
.specify/memory/: constitution.md
.specify/scripts/bash/: deploy-spaces.sh  run-tests.sh  setup-dev.sh  switch-worktree.sh
.specify/specs/: 01-data-pipeline.md  02-recommender-core.md  03-gradio-ui.md  04-evaluation-framework.md  05-deployment-hf-spaces.md
app/: app.py
data/: SOURCES.md
data/processed/: meta_topk.json  mon_features.json
data/raw/: pokedex.json  type_chart.json  usage_ou.csv
data/test_sets/: README.md  complete_teams.json  partial_teams.json  smoke_partial_teams.json  smoke_tests.json
docs/: EVALUATION_FRAMEWORK.md  product_spec.md  v2-PRD.md
models/: hybrid_ranker.pkl
scripts/: add_sprites.py  build_comprehensive_dataset.py  build_test_set.py  expand_dataset.py  generate_partial_teams.py  setup.sh  test_expanded_data.py  train_ml_model.py
src/: __init__.py
src/app/: explanation_templates.py  explanations.py
src/data/: loaders.py  pokedex.py  types.py  usage.py
src/eval/: __init__.py  generate_report.py  metrics.py  run_ablations.py  run_evaluation.py
src/features/: coverage.py  meta.py  roles.py  type_coverage.py
src/ml/: hybrid_ranker.py
src/search/: greedy.py  ml_recommender.py  recommender.py
tests/: test_loaders.py
tests/unit/: test_coverage.py  test_eval_metrics.py  test_explanations.py  test_pokedex.py  test_recommender.py  test_roles.py  test_types.py  test_usage.py
